--- a/install.txt
+++ b/install.txt
@@ -9,8 +9,6 @@ sudo python3.8 -m pip install --upgrade pip &>/dev/null
 echo -e "\rDone download python3.8"
 echo -n "Downloading libraries.." 
 sudo apt-get update -y &>/dev/null
-sudo apt --fix-broken install -y &>/dev/null
-sudo python3.8 -m pip install -U setuptools &>/dev/null
 sudo python3.8 -m pip install -U Pyrogram &>/dev/null
 sudo python3.8 -m pip install -U tgcrypto &>/dev/null
 sudo python3.8 -m pip install redis &>/dev/null
@@ -20,6 +18,6 @@ echo -e "\rDone download libraries"
 echo -n "Downloading pm2.." 
 curl -sL https://deb.nodesource.com/setup_12.x | sudo bash - &>/dev/null; sudo apt-get update &>/dev/null; sudo apt install nodejs -y &>/dev/null; sudo npm install -g pm2 &>/dev/null
 echo -e "\rDone download pm2"
-echo -n "Downloading Rambo Source.." 
+echo -n "Downloading Tshake Source.." 
 git clone https://github.com/ramizob3a/TshakeV2.git &>/dev/null
-echo -e "\rDone Rambo Source"
+echo -e "\rDone Tshake Source"
